// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CredentialCard should render collapased share credential card 1`] = `
<div>
  <li
    aria-expanded="false"
    class="selectable"
  >
    <input
      class="select"
      id="0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae"
      name="credential"
      type="radio"
    />
    <label
      class="expand"
      for="0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae"
    >
      <section
        class="collapsedShareCredential"
      >
        <h4
          class="collapsedName"
        >
          Email Credential
        </h4>
        <p
          class="collapsedValue"
        >
          Trusted Entity attester
        </p>
      </section>
    </label>
  </li>
</div>
`;

exports[`CredentialCard should render collapsed card 1`] = `
<div>
  <li
    aria-expanded="false"
    class="credential"
  >
    <button
      class="expand"
      type="button"
    >
      <section
        class="collapsedCredential"
      >
        <h4
          class="collapsedName"
        >
          Email Credential
        </h4>
        <p
          class="collapsedValue"
        >
          mockEmail@mock.mock
        </p>
      </section>
    </button>
    <div />
  </li>
</div>
`;

exports[`CredentialCard should render collapsed card with backup notification 1`] = `
<div>
  <li
    aria-expanded="false"
    class="credential"
  >
    <button
      aria-label="Not downloaded Email Credential mockEmail@mock.mock (Not backed up)"
      class="downloadPrompt"
      type="button"
    >
      <section
        class="collapsedCredential"
      >
        <h4
          class="collapsedName"
        >
          Not downloaded Email Credential
        </h4>
        <p
          class="collapsedValue"
        >
          mockEmail@mock.mock
        </p>
      </section>
    </button>
    <div />
  </li>
</div>
`;

exports[`CredentialCard should render expanded card on click 1`] = `
<div>
  <li
    aria-expanded="true"
    class="credential"
  >
    <section
      class="expanded"
    >
      <section
        class="buttons"
      >
        <button
          aria-label="Collapse credential details"
          class="collapse"
          type="button"
        />
        <a
          aria-label="Back up credential"
          class="download"
          download="Email Credential-Email.json"
          href="data:text/json;base64,eyJraWx0Q3JlZGVudGlhbCI6eyJjbGFpbSI6eyJjVHlwZUhhc2giOiIweDMyOTFiYjEyNmUzM2I0ODYyZDQyMWJmYWExZDJmMjcyZTZjZGZjNGY5NjY1ODk4OGZiY2ZmZWE4OTE0YmQ5YWMiLCJjb250ZW50cyI6eyJFbWFpbCI6Im1vY2tFbWFpbEBtb2NrLm1vY2sifSwib3duZXIiOiJkaWQ6a2lsdDpsaWdodDowMDRvVWlLM0V2VGN6YzZ1a1lMRVY1N0J1eHprVzl6a3NLUmNoWlhZR1NvY0xtV0U1TiJ9LCJjbGFpbUhhc2hlcyI6WyIweDE0NDU5N2QyODQ1ZTMyNWRmZmQ0ZTUxYTk0ZTNlOWMwNGI1MmRjMTU3M2U2NmFmYzY5Mzg0NmQ5MWYzMWE3MTMiLCIweDMxNzdlYTQxZjc2ZDA2NmQxOTEyM2MyY2IwZGUxM2EzN2Q2MzkwNmQyYzUxOWUzNmZiZmQ3NzczZmFjMWI3MTgiLCIweDlkMmRjYWY1MjM4ZDZiYzRiY2YwMzI4YWVkYjE2ODk0MzZlMDc3ZWJmNjE5OGI2YzRlOTYxNjY0ODA3ZWFlZGYiLCIweGNlZTE5M2ZmZGZhNjM0ODc5MDdkZmUwODQ4YWUxNTBkNGE3MTk2Y2MxZTNkNWJkMmM4OWJlY2I1NDAyZWZjMDciXSwiY2xhaW1Ob25jZU1hcCI6eyIweDU3NDU4YTY5NzJlNzgyMjNjZDRmN2Y0YzU5MjM2ZWE3NmYzODdhZTU3MWFiN2U3OTQ2MGY1NmYyYWE5NzYyM2YiOiJkMGM5ZDY0Ny00MmVmLTRkNDQtYjYwMy0zYjc3NjI2MGE2ZGQiLCIweGNlZmUyYjg4ZDEwODM0ODY5ZGFkM2U4ZDczMDZmNWFhOTlhMWYwNzgyMTRhZGVhZTc5Y2JlZWQzMDNlNjM4YWYiOiI2YjYyMzA4Yy04NTU3LTRiNjEtYWMwMi04ZjkwNTU1NWQ2N2IiLCIweDhiZTMyZDdlOWNjNTAxNWJmNzFiNWM0NTU1MGE4NzkwYzQzYjlhMjZkYmZhOWE4NTIzODcxMjExNzQ1ZDMzYTMiOiIyNDczOTRjMC1kNDZiLTQ4MmEtYjBjNS00OTNhZWI1MDZkNjEiLCIweDEzNjFhN2JhNzUxMjU2ZTlhYzZiM2UzZTI0OTEyZTUwZTY4YmVmNjc4YzUxMzJjMTFjOTU2NzgyMjBlM2JmNWUiOiIwN2I5NWYxNy0zZjIzLTRhOWUtOGY0My0zMzg4MTI3MzY4MmMifSwibGVnaXRpbWF0aW9ucyI6W10sImRlbGVnYXRpb25JZCI6bnVsbCwicm9vdEhhc2giOiIweGJlN2ZjYzdhYTAxODZiMDVmZDExNmMxMDBlMmQ2NzNmYjk1MTE2MzY5Mzc4ODY0MGNlNjAzMmFkMmY3MDBkYWUifSwibmFtZSI6IkVtYWlsIENyZWRlbnRpYWwiLCJjVHlwZVRpdGxlIjoiRW1haWwiLCJhdHRlc3RlciI6IlRydXN0ZWQgRW50aXR5IGF0dGVzdGVyIiwic3RhdHVzIjoiYXR0ZXN0ZWQiLCJpc0Rvd25sb2FkZWQiOnRydWV9"
        />
        <button
          aria-label="Remove credential"
          class="remove"
          type="button"
        />
      </section>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Credential name
          </dt>
          <dd
            class="nameValue"
          >
            Email Credential
            <button
              aria-label="Edit credential name"
              class="editName"
            />
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Status
          </dt>
          <dd
            class="detailValue"
          >
            Attested
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Email
          </dt>
          <dd
            class="detailValue"
          >
            mockEmail@mock.mock
          </dd>
        </div>
      </dl>
      <h4
        class="technical"
      >
        Technical details
      </h4>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            CType
          </dt>
          <dd
            class="detailValue"
          >
            Email
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Attester
          </dt>
          <dd
            class="detailValue"
          >
            Trusted Entity attester
          </dd>
        </div>
        <div
          class="hash"
        >
          <dt
            class="detailName"
          >
            Credential hash
          </dt>
          <dd
            class="detailValue"
          >
            0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae
          </dd>
        </div>
      </dl>
    </section>
    <div />
  </li>
</div>
`;

exports[`CredentialCard should render expanded card with backup notification 1`] = `
<div>
  <li
    aria-expanded="true"
    class="credential"
  >
    <section
      class="expanded"
    >
      <section
        class="buttons"
      >
        <button
          aria-label="Collapse credential details"
          class="collapse"
          type="button"
        />
        <a
          aria-label="Back up credential"
          class="downloadPromptExpanded"
          download="Not downloaded Email Credential-Email.json"
          href="data:text/json;base64,eyJraWx0Q3JlZGVudGlhbCI6eyJjbGFpbSI6eyJjVHlwZUhhc2giOiIweDMyOTFiYjEyNmUzM2I0ODYyZDQyMWJmYWExZDJmMjcyZTZjZGZjNGY5NjY1ODk4OGZiY2ZmZWE4OTE0YmQ5YWMiLCJjb250ZW50cyI6eyJFbWFpbCI6Im1vY2tFbWFpbEBtb2NrLm1vY2sifSwib3duZXIiOiJkaWQ6a2lsdDo0b2VKNzZoZGo4NHhud0NOcWlqVUhVQ1RtZndYZ1NaNHZteExFaVRFWWdRZEJDY1oifSwiY2xhaW1IYXNoZXMiOlsiMHgxNDQ1OTdkMjg0NWUzMjVkZmZkNGU1MWE5NGUzZTljMDRiNTJkYzE1NzNlNjZhZmM2OTM4NDZkOTFmMzFhNzEzIiwiMHgzMTc3ZWE0MWY3NmQwNjZkMTkxMjNjMmNiMGRlMTNhMzdkNjM5MDZkMmM1MTllMzZmYmZkNzc3M2ZhYzFiNzE4IiwiMHg5ZDJkY2FmNTIzOGQ2YmM0YmNmMDMyOGFlZGIxNjg5NDM2ZTA3N2ViZjYxOThiNmM0ZTk2MTY2NDgwN2VhZWRmIiwiMHhjZWUxOTNmZmRmYTYzNDg3OTA3ZGZlMDg0OGFlMTUwZDRhNzE5NmNjMWUzZDViZDJjODliZWNiNTQwMmVmYzA3Il0sImNsYWltTm9uY2VNYXAiOnsiMHg1NzQ1OGE2OTcyZTc4MjIzY2Q0ZjdmNGM1OTIzNmVhNzZmMzg3YWU1NzFhYjdlNzk0NjBmNTZmMmFhOTc2MjNmIjoiZDBjOWQ2NDctNDJlZi00ZDQ0LWI2MDMtM2I3NzYyNjBhNmRkIiwiMHhjZWZlMmI4OGQxMDgzNDg2OWRhZDNlOGQ3MzA2ZjVhYTk5YTFmMDc4MjE0YWRlYWU3OWNiZWVkMzAzZTYzOGFmIjoiNmI2MjMwOGMtODU1Ny00YjYxLWFjMDItOGY5MDU1NTVkNjdiIiwiMHg4YmUzMmQ3ZTljYzUwMTViZjcxYjVjNDU1NTBhODc5MGM0M2I5YTI2ZGJmYTlhODUyMzg3MTIxMTc0NWQzM2EzIjoiMjQ3Mzk0YzAtZDQ2Yi00ODJhLWIwYzUtNDkzYWViNTA2ZDYxIiwiMHgxMzYxYTdiYTc1MTI1NmU5YWM2YjNlM2UyNDkxMmU1MGU2OGJlZjY3OGM1MTMyYzExYzk1Njc4MjIwZTNiZjVlIjoiMDdiOTVmMTctM2YyMy00YTllLThmNDMtMzM4ODEyNzM2ODJjIn0sImxlZ2l0aW1hdGlvbnMiOltdLCJkZWxlZ2F0aW9uSWQiOm51bGwsInJvb3RIYXNoIjoiMHg4NmEyMDA1MWU2ZDFlZWNiMGRkNmU5YzdiM2IwY2Y5NDY4NjdlNjYyYjUyNWVmMmU5YWZlODQyOGY2NjE2YWUwIn0sIm5hbWUiOiJOb3QgZG93bmxvYWRlZCBFbWFpbCBDcmVkZW50aWFsIiwiY1R5cGVUaXRsZSI6IkVtYWlsIiwiYXR0ZXN0ZXIiOiJUcnVzdGVkIEVudGl0eSBhdHRlc3RlciIsInN0YXR1cyI6ImF0dGVzdGVkIiwiaXNEb3dubG9hZGVkIjpmYWxzZX0="
        />
        <button
          aria-label="Remove credential"
          class="remove"
          type="button"
        />
      </section>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Credential name
          </dt>
          <dd
            class="nameValue"
          >
            Not downloaded Email Credential
            <button
              aria-label="Edit credential name"
              class="editName"
            />
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Status
          </dt>
          <dd
            class="detailValue"
          >
            Attested
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Email
          </dt>
          <dd
            class="detailValue"
          >
            mockEmail@mock.mock
          </dd>
        </div>
      </dl>
      <h4
        class="technical"
      >
        Technical details
      </h4>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            CType
          </dt>
          <dd
            class="detailValue"
          >
            Email
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Attester
          </dt>
          <dd
            class="detailValue"
          >
            Trusted Entity attester
          </dd>
        </div>
        <div
          class="hash"
        >
          <dt
            class="detailName"
          >
            Credential hash
          </dt>
          <dd
            class="detailValue"
          >
            0x86a20051e6d1eecb0dd6e9c7b3b0cf946867e662b525ef2e9afe8428f6616ae0
          </dd>
        </div>
      </dl>
    </section>
    <div />
  </li>
</div>
`;

exports[`CredentialCard should render expanded card without backup and delete buttons 1`] = `
<div>
  <li
    aria-expanded="true"
    class="credential"
  >
    <section
      class="expanded"
    >
      <section
        class="buttons"
      >
        <button
          aria-label="Collapse credential details"
          class="collapse"
          type="button"
        />
      </section>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Credential name
          </dt>
          <dd
            class="nameValue"
          >
            Email Credential
            <button
              aria-label="Edit credential name"
              class="editName"
            />
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Status
          </dt>
          <dd
            class="detailValue"
          >
            Attested
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Email
          </dt>
          <dd
            class="detailValue"
          >
            mockEmail@mock.mock
          </dd>
        </div>
      </dl>
      <h4
        class="technical"
      >
        Technical details
      </h4>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            CType
          </dt>
          <dd
            class="detailValue"
          >
            Email
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Attester
          </dt>
          <dd
            class="detailValue"
          >
            Trusted Entity attester
          </dd>
        </div>
        <div
          class="hash"
        >
          <dt
            class="detailName"
          >
            Credential hash
          </dt>
          <dd
            class="detailValue"
          >
            0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae
          </dd>
        </div>
      </dl>
    </section>
    <div />
  </li>
</div>
`;

exports[`CredentialCard should render expanded share credential card 1`] = `
<div>
  <li
    aria-expanded="true"
    class="selectable"
  >
    <input
      checked=""
      class="select"
      id="0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae"
      name="credential"
      type="radio"
    />
    <section
      class="shareExpanded"
    >
      <section
        class="buttons"
      >
        <button
          aria-label="Collapse credential details"
          class="collapse"
          type="button"
        />
      </section>
      <section>
        <dl
          class="details"
        >
          <div
            class="detail"
          >
            <dt
              class="detailName"
            >
              Credential name
            </dt>
            <dd
              class="detailValue"
            >
              Email Credential
            </dd>
          </div>
          <div
            class="detail"
          >
            <dt
              class="detailName"
            >
              Status
            </dt>
            <dd
              class="detailValue"
            >
              Attested
            </dd>
          </div>
          <div
            class="detail"
          >
            <dt
              class="detailName required"
            >
              Email
            </dt>
            <dd
              class="detailValue"
            >
              <label
                class="shareLabel"
              >
                <input
                  checked=""
                  class="share"
                  name="Email"
                  readonly=""
                  type="checkbox"
                />
                <span />
                mockEmail@mock.mock
              </label>
            </dd>
          </div>
        </dl>
        <p
          class="requiredInfo"
        >
          * required
        </p>
      </section>
      <h4
        class="shareTechnical"
      >
        Technical details
      </h4>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            CType
          </dt>
          <dd
            class="detailValue"
          >
            Email
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Attester
          </dt>
          <dd
            class="detailValue"
          >
            Trusted Entity attester
          </dd>
        </div>
        <div
          class="hash"
        >
          <dt
            class="detailName"
          >
            Credential hash
          </dt>
          <dd
            class="detailValue"
          >
            0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae
          </dd>
        </div>
      </dl>
    </section>
  </li>
</div>
`;

exports[`CredentialCard should render uncollapsible card 1`] = `
<div>
  <li
    aria-expanded="true"
    class="credential"
  >
    <section
      class="expanded"
    >
      <section
        class="buttons"
      >
        <a
          aria-label="Back up credential"
          class="download"
          download="Email Credential-Email.json"
          href="data:text/json;base64,eyJraWx0Q3JlZGVudGlhbCI6eyJjbGFpbSI6eyJjVHlwZUhhc2giOiIweDMyOTFiYjEyNmUzM2I0ODYyZDQyMWJmYWExZDJmMjcyZTZjZGZjNGY5NjY1ODk4OGZiY2ZmZWE4OTE0YmQ5YWMiLCJjb250ZW50cyI6eyJFbWFpbCI6Im1vY2tFbWFpbEBtb2NrLm1vY2sifSwib3duZXIiOiJkaWQ6a2lsdDpsaWdodDowMDRvVWlLM0V2VGN6YzZ1a1lMRVY1N0J1eHprVzl6a3NLUmNoWlhZR1NvY0xtV0U1TiJ9LCJjbGFpbUhhc2hlcyI6WyIweDE0NDU5N2QyODQ1ZTMyNWRmZmQ0ZTUxYTk0ZTNlOWMwNGI1MmRjMTU3M2U2NmFmYzY5Mzg0NmQ5MWYzMWE3MTMiLCIweDMxNzdlYTQxZjc2ZDA2NmQxOTEyM2MyY2IwZGUxM2EzN2Q2MzkwNmQyYzUxOWUzNmZiZmQ3NzczZmFjMWI3MTgiLCIweDlkMmRjYWY1MjM4ZDZiYzRiY2YwMzI4YWVkYjE2ODk0MzZlMDc3ZWJmNjE5OGI2YzRlOTYxNjY0ODA3ZWFlZGYiLCIweGNlZTE5M2ZmZGZhNjM0ODc5MDdkZmUwODQ4YWUxNTBkNGE3MTk2Y2MxZTNkNWJkMmM4OWJlY2I1NDAyZWZjMDciXSwiY2xhaW1Ob25jZU1hcCI6eyIweDU3NDU4YTY5NzJlNzgyMjNjZDRmN2Y0YzU5MjM2ZWE3NmYzODdhZTU3MWFiN2U3OTQ2MGY1NmYyYWE5NzYyM2YiOiJkMGM5ZDY0Ny00MmVmLTRkNDQtYjYwMy0zYjc3NjI2MGE2ZGQiLCIweGNlZmUyYjg4ZDEwODM0ODY5ZGFkM2U4ZDczMDZmNWFhOTlhMWYwNzgyMTRhZGVhZTc5Y2JlZWQzMDNlNjM4YWYiOiI2YjYyMzA4Yy04NTU3LTRiNjEtYWMwMi04ZjkwNTU1NWQ2N2IiLCIweDhiZTMyZDdlOWNjNTAxNWJmNzFiNWM0NTU1MGE4NzkwYzQzYjlhMjZkYmZhOWE4NTIzODcxMjExNzQ1ZDMzYTMiOiIyNDczOTRjMC1kNDZiLTQ4MmEtYjBjNS00OTNhZWI1MDZkNjEiLCIweDEzNjFhN2JhNzUxMjU2ZTlhYzZiM2UzZTI0OTEyZTUwZTY4YmVmNjc4YzUxMzJjMTFjOTU2NzgyMjBlM2JmNWUiOiIwN2I5NWYxNy0zZjIzLTRhOWUtOGY0My0zMzg4MTI3MzY4MmMifSwibGVnaXRpbWF0aW9ucyI6W10sImRlbGVnYXRpb25JZCI6bnVsbCwicm9vdEhhc2giOiIweGJlN2ZjYzdhYTAxODZiMDVmZDExNmMxMDBlMmQ2NzNmYjk1MTE2MzY5Mzc4ODY0MGNlNjAzMmFkMmY3MDBkYWUifSwibmFtZSI6IkVtYWlsIENyZWRlbnRpYWwiLCJjVHlwZVRpdGxlIjoiRW1haWwiLCJhdHRlc3RlciI6IlRydXN0ZWQgRW50aXR5IGF0dGVzdGVyIiwic3RhdHVzIjoiYXR0ZXN0ZWQiLCJpc0Rvd25sb2FkZWQiOnRydWV9"
        />
        <button
          aria-label="Remove credential"
          class="remove"
          type="button"
        />
      </section>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Credential name
          </dt>
          <dd
            class="nameValue"
          >
            Email Credential
            <button
              aria-label="Edit credential name"
              class="editName"
            />
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Status
          </dt>
          <dd
            class="detailValue"
          >
            Attested
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Email
          </dt>
          <dd
            class="detailValue"
          >
            mockEmail@mock.mock
          </dd>
        </div>
      </dl>
      <h4
        class="technical"
      >
        Technical details
      </h4>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            CType
          </dt>
          <dd
            class="detailValue"
          >
            Email
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Attester
          </dt>
          <dd
            class="detailValue"
          >
            Trusted Entity attester
          </dd>
        </div>
        <div
          class="hash"
        >
          <dt
            class="detailName"
          >
            Credential hash
          </dt>
          <dd
            class="detailValue"
          >
            0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae
          </dd>
        </div>
      </dl>
    </section>
    <div />
  </li>
</div>
`;
